fpp_parser/src/tests/illegal-character.ref.txt
error: syntax error
 --> [ local path prefix ]/illegal-character.fpp:1:1
  |
1 | %
  | ^ invalid character '%'

error: syntax error
 --> [ local path prefix ]/illegal-character.fpp:2:1
  |
2 |     
  | ^^^^ invalid character '\t'

error: syntax error
 --> [ local path prefix ]/illegal-character.fpp:3:1
  |
3 | tok \     
  | ^^^ module member expected
  |
  = note: expected one of type, array, constant, enum, struct, component, active, passive, queued, interface, module, port, state, topology, include, locate
  = note: got identifier

error: syntax error
 --> [ local path prefix ]/illegal-character.fpp:4:6
  |
4 | tok2 \ illegal
  |      ^^^^^^^^^ invalid token
  |
  = error: Non whitespace character illegal after line continuation

